# TerraLink

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  game.settings  network.settings
assets/maps/blocks/: air.json  birch_log.json  birch_planks.json  bricks.json  cactus.json  cobble_stone.json  dark_log.json  dark_planks.json  dead_bush.json  dirt.json  glass.json  grass.json  grass_plant.json  leaves.json  mushroom_block.json  mushroom_block_stem.json  sand.json  snow.json  stone.json  tilled_dirt.json  wood_planks.json
include/audio/: AudioManager.h
include/core/camera/: Camera.h
include/core/game/: Game.h  GameInit.h
include/core/player/: Camera.h  Player.h
include/core/registers/: AtlasRegister.h  BlockRegister.h
include/core/threads/: OpenMP.h  ThreadSafeQueue.h
include/core/world/: Biome.h  BiomeMap.h  BiomeNoise.h  BiomeRegistry.h  Block.h  Chunk.h  Cloud.h  FlatWorld.h  TerrainGeneration.h  World.h
include/graphics/: Mesh.h  Shader.h  Texture.h  Vertex.h  VertexArrayObject.h  VertexBuffer.h
include/input/: DetectInput.h
include/network/: Address.h  Message.h  Network.h  NetworkRole.h  Serializer.h  Server.h  TCPSocket.h  UDPSocket.h
include/noise/: Noise.h  simplexnoise1234.h
include/utils/: GLUtils.h
registry/: BiomeRegistry.h  block_registry.json
shaders/: block.frag  block.vert  cloud.frag  cloud.vert  ui.frag  ui.vert
src/: main.cpp  resource.rc
src/audio/: AudioManager.cpp
src/core/camera/: Camera.cpp
src/core/game/: Game.cpp  GameInit.cpp
src/core/player/: Camera.cpp  Player.cpp
src/core/registers/: AtlasRegister.cpp  BlockRegister.cpp
src/core/world/: BiomeMap.cpp  BiomeNoise.cpp  BiomeRegistry.cpp  Chunk.cpp  FlatWorld.cpp  TerrainGeneration.cpp  World.cpp
src/graphics/: Mesh.cpp  Shader.cpp  Texture.cpp  VertexArrayObject.cpp  VertexBuffer.cpp
src/input/: DetectInput.cpp
src/network/: Message.cpp  Network.cpp  Serializer.cpp  Server.cpp  TCPSocket.cpp  UDPSocket.cpp
src/noise/: Noise.cpp  simplexnoise1234.c
src/utils/: GLUtils.cpp  STB.cpp
